# wellcadformats

./: .gitignore  README.md  pyproject.toml
examples/: Example - full-waveform sonic log - WAF.ipynb  Example well log WAW file.ipynb  full_waveform_sonic.waf  well_log.waw
wellcadformats/: __init__.py  arraydata.py  curvedata.py  sonicgui.py  wa.py
